design: hr 태그 색상 및 기본 마진 설정

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -73,6 +73,11 @@ ul {
   font-weight: 800;
 }
 
+.prose hr {
+  margin: 20px 0;
+  color: #c0c0c0;
+}
+
 .prose ul {
   margin: 0;
   display: block;
