design: 코드 블록 폰트 크기 축소 (16 -> 13)

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,6 +13,7 @@ pre {
 /* pretty-code (shiki) recommend */
 .prose pre > code {
   display: grid;
+  font-size: 13px;
 }
 
 /* Fenced Code block - hide horizontal scrollbar: webkit */
